--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL=http://104.251.216.241/ror/ss_studio_api/
+REACT_APP_API_BASE_URL=http://localhost:4000/
 REACT_APP_BASE_PATH=
