--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Build folder
 build/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
