--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-rating": "^0.8.1",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
+    "react-select": "^1.0.0-rc.5",
     "redux": "^3.7.2",
     "save": "^2.3.1",
     "sweetalert-react": "^0.4.10",
