--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
+    "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^15.6.1",
     "react-rating": "^0.8.1",
     "react-router-bootstrap": "^0.24.2",
