--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^0.31.0",
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^15.6.1",
+    "react-dropzone-component": "^2.0.0",
     "react-rating": "^0.8.1",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
