--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^15.6.1",
     "react-dropzone-component": "^2.0.0",
+    "react-iframe": "^1.0.7",
     "react-image-lightbox": "^4.1.0",
     "react-rating": "^0.8.1",
     "react-router-bootstrap": "^0.24.2",
@@ -21,7 +22,8 @@
     "redux": "^3.7.2",
     "save": "^2.3.1",
     "sweetalert-react": "^0.4.10",
-    "video-react": "^0.8.6"
+    "video-react": "^0.8.6",
+    "youtube-thumbnail": "^1.3.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
