--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^15.6.1",
