--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
