--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
     "react-select": "^1.0.0-rc.5",
+    "rprogress": "^2.2.0",
     "save": "^2.3.1",
     "sweetalert-react": "^0.4.10",
     "video-react": "^0.8.6",
