--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^15.6.1",
     "react-dropzone-component": "^2.0.0",
+    "react-google-login": "^2.9.3",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.0.7",
     "react-image-lightbox": "^4.1.0",
