--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "nprogress": "^0.2.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
@@ -18,7 +19,6 @@
     "react-iframe": "^1.0.7",
     "react-image-lightbox": "^4.1.0",
     "react-loadable": "^4.0.5",
-    "react-loading-bar": "0.0.4",
     "react-rating": "^0.8.1",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
