Add production env instructions

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,9 @@
-REACT_APP_API_BASE_URL=http://104.251.216.241/ror/ss_studio_api/
-REACT_APP_BASE_PATH=/demo/ss_studio
+# Staging env
+# REACT_APP_API_BASE_URL=http://104.251.216.241/ror/ss_studio_api/
+# REACT_APP_BASE_PATH=/demo/ss_studio
+
+# Production env
+REACT_APP_API_BASE_URL=http://104.251.216.241/sites/sagargadani/ss_studio_api/
+REACT_APP_BASE_PATH=
+
+# Note: Comment staging env while generating production build and vice versa, and also update 'homepage' with environment variable in package.json.
