--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ss_studio_frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://104.251.216.241/demo/ss_studio",
+  "homepage": "http://104.251.216.241/sites/sagargadani/ss_studio_api/",
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
