--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "youtube-thumbnail": "^1.3.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "react-social-icons": "^2.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
