--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
+    "draft-js": "^0.10.4",
+    "draftjs-to-html": "^0.7.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "nprogress": "^0.2.0",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
     "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-custom-scrollbars": "^4.1.2",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
+    "react-draft-wysiwyg": "^1.10.12",
     "react-dropzone-component": "^2.0.0",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.0.7",
