--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "draft-js": "^0.10.4",
     "draftjs-to-html": "^0.7.6",
     "font-awesome": "^4.7.0",
+    "html-to-draftjs": "^1.0.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "nprogress": "^0.2.0",
