--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
