--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-draft-wysiwyg": "^1.10.12",
     "react-dragula": "^1.1.17",
     "react-dropzone-component": "^2.0.0",
+    "react-flash-message": "^1.0.2",
     "react-google-login": "^2.9.3",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.0.7",
