--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^15.6.2",
     "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
+    "react-collapsible": "^2.3.2",
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^15.6.2",
     "react-draft-wysiwyg": "^1.10.12",
