--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nprogress": "^0.2.0",
     "react": "^15.6.2",
     "react-addons-css-transition-group": "^15.6.0",
+    "react-avatar-editor": "^11.0.7",
     "react-bootstrap": "^0.31.0",
     "react-collapsible": "^2.3.2",
     "react-custom-scrollbars": "^4.1.2",
