--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-iframe": "^1.0.7",
     "react-image-lightbox": "^4.1.0",
     "react-loadable": "^4.0.5",
+    "react-qr-svg": "^2.4.0",
     "react-rating": "^0.8.1",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
